Доработана функция получения расширенной информации.

--- a/Test Flask requests.ipynb
+++ b/Test Flask requests.ipynb
@@ -4,7 +4,12 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "aa03a7e3",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-09-27T08:55:23.689835200Z",
+     "start_time": "2023-09-27T08:55:23.638636200Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import requests\n",
@@ -36,8 +41,7 @@
       "      }\n",
       "    ]\n",
       "  }\n",
-      "}\n",
-      "\n"
+      "}\n"
      ]
     }
    ],
